--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+<h1>Scrollbar example</h1>
 <section>
 
 <article class="my-article">
-    <h1 class="my-header">Header</h1>
+    <h2 class="my-header">Header</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim eveniet minus non odio quibusdam. Atque dolorum
         explicabo facere labore libero maxime officia quisquam temporibus ut, voluptas, voluptates voluptatum.
         Laudantium, mollitia.</p>
@@ -46,7 +47,7 @@
 </article>
 
     <article class="my-article">
-        <h1 class="my-header">Header</h1>
+        <h2 class="my-header">Header</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim eveniet minus non odio quibusdam. Atque dolorum
             explicabo facere labore libero maxime officia quisquam temporibus ut, voluptas, voluptates voluptatum.
             Laudantium, mollitia.</p>
@@ -83,7 +84,44 @@
     </article>
 
     <article class="my-article">
-        <h1 class="my-header">Header</h1>
+        <h2 class="my-header">Header</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim eveniet minus non odio quibusdam. Atque dolorum
+            explicabo facere labore libero maxime officia quisquam temporibus ut, voluptas, voluptates voluptatum.
+            Laudantium, mollitia.</p>
+        <p>Alias aliquam aspernatur autem beatae commodi consectetur consequuntur, doloremque dolores maxime minima modi
+            molestiae nesciunt nulla possimus quasi quisquam ratione reiciendis reprehenderit sapiente sed sint temporibus
+            tenetur unde veritatis voluptates.</p>
+        <p>A, delectus dignissimos exercitationem facere fuga in nemo nesciunt nostrum optio quos ut, vero voluptate
+            voluptatem. Dicta ducimus iusto laboriosam nobis numquam perspiciatis provident qui, quis sit veniam
+            voluptatibus voluptatum?</p>
+        <p>Adipisci assumenda atque, deleniti dolorum exercitationem facilis iste maiores odio ratione voluptatum? Animi
+            deserunt dolor, enim ex incidunt modi possimus quae quisquam repudiandae voluptatibus! Assumenda commodi iste
+            iure quidem tempore?</p>
+        <p>Autem nihil nisi officiis perferendis porro. Architecto asperiores aspernatur cumque ducimus eligendi est,
+            exercitationem facilis labore minima mollitia non placeat possimus provident quas quisquam quo, quod
+            reprehenderit soluta ullam voluptatibus!</p>
+        <p>Ad amet asperiores incidunt itaque laudantium, odio tempore! Amet architecto assumenda cupiditate earum eligendi,
+            itaque labore, magnam mollitia nemo nihil provident quo, sapiente sint sunt suscipit unde vitae voluptatem
+            voluptatibus?</p>
+        <p>Consequatur culpa debitis, deleniti dolores ducimus ea earum esse eum eveniet ex fuga id itaque iure nisi nulla,
+            officia optio pariatur praesentium provident quae quas reiciendis reprehenderit sapiente ut veritatis!</p>
+        <p>Illo molestiae sequi sunt ut! Accusantium ad, asperiores blanditiis consectetur consequatur earum eligendi
+            inventore iusto maiores minima odit quae quasi repellat sunt vitae voluptas voluptates? Architecto id magni
+            officiis vero.</p>
+        <p>Asperiores blanditiis delectus et eum iste nihil porro rerum vel. Enim eum expedita harum, id nisi obcaecati odit
+            porro qui quibusdam quo. Cupiditate exercitationem obcaecati officiis quod! Laborum necessitatibus, quis.</p>
+        <p>A accusantium ad, atque doloribus in iste laboriosam maiores, molestiae nesciunt odit perspiciatis qui quia
+            reiciendis saepe temporibus velit voluptates? Consequuntur cum molestias nihil numquam pariatur porro vitae,
+            voluptatem voluptates?</p>
+        <ul>
+            <li>Lorem.</li>
+            <li>Molestias.</li>
+            <li>Consequuntur!</li>
+        </ul>
+    </article>
+
+    <article class="my-article">
+        <h2 class="my-header">Header</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim eveniet minus non odio quibusdam. Atque dolorum
             explicabo facere labore libero maxime officia quisquam temporibus ut, voluptas, voluptates voluptatum.
             Laudantium, mollitia.</p>
@@ -119,43 +157,7 @@
         </ul>
     </article>
     <article class="my-article">
-        <h1 class="my-header">Header</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim eveniet minus non odio quibusdam. Atque dolorum
-            explicabo facere labore libero maxime officia quisquam temporibus ut, voluptas, voluptates voluptatum.
-            Laudantium, mollitia.</p>
-        <p>Alias aliquam aspernatur autem beatae commodi consectetur consequuntur, doloremque dolores maxime minima modi
-            molestiae nesciunt nulla possimus quasi quisquam ratione reiciendis reprehenderit sapiente sed sint temporibus
-            tenetur unde veritatis voluptates.</p>
-        <p>A, delectus dignissimos exercitationem facere fuga in nemo nesciunt nostrum optio quos ut, vero voluptate
-            voluptatem. Dicta ducimus iusto laboriosam nobis numquam perspiciatis provident qui, quis sit veniam
-            voluptatibus voluptatum?</p>
-        <p>Adipisci assumenda atque, deleniti dolorum exercitationem facilis iste maiores odio ratione voluptatum? Animi
-            deserunt dolor, enim ex incidunt modi possimus quae quisquam repudiandae voluptatibus! Assumenda commodi iste
-            iure quidem tempore?</p>
-        <p>Autem nihil nisi officiis perferendis porro. Architecto asperiores aspernatur cumque ducimus eligendi est,
-            exercitationem facilis labore minima mollitia non placeat possimus provident quas quisquam quo, quod
-            reprehenderit soluta ullam voluptatibus!</p>
-        <p>Ad amet asperiores incidunt itaque laudantium, odio tempore! Amet architecto assumenda cupiditate earum eligendi,
-            itaque labore, magnam mollitia nemo nihil provident quo, sapiente sint sunt suscipit unde vitae voluptatem
-            voluptatibus?</p>
-        <p>Consequatur culpa debitis, deleniti dolores ducimus ea earum esse eum eveniet ex fuga id itaque iure nisi nulla,
-            officia optio pariatur praesentium provident quae quas reiciendis reprehenderit sapiente ut veritatis!</p>
-        <p>Illo molestiae sequi sunt ut! Accusantium ad, asperiores blanditiis consectetur consequatur earum eligendi
-            inventore iusto maiores minima odit quae quasi repellat sunt vitae voluptas voluptates? Architecto id magni
-            officiis vero.</p>
-        <p>Asperiores blanditiis delectus et eum iste nihil porro rerum vel. Enim eum expedita harum, id nisi obcaecati odit
-            porro qui quibusdam quo. Cupiditate exercitationem obcaecati officiis quod! Laborum necessitatibus, quis.</p>
-        <p>A accusantium ad, atque doloribus in iste laboriosam maiores, molestiae nesciunt odit perspiciatis qui quia
-            reiciendis saepe temporibus velit voluptates? Consequuntur cum molestias nihil numquam pariatur porro vitae,
-            voluptatem voluptates?</p>
-        <ul>
-            <li>Lorem.</li>
-            <li>Molestias.</li>
-            <li>Consequuntur!</li>
-        </ul>
-    </article>
-    <article class="my-article">
-        <h1 class="my-header">Header</h1>
+        <h2 class="my-header">Header</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim eveniet minus non odio quibusdam. Atque dolorum
             explicabo facere labore libero maxime officia quisquam temporibus ut, voluptas, voluptates voluptatum.
             Laudantium, mollitia.</p>
